@@ -273,11 +273,9 @@ public class ResourceController {
         String detectedType = ImageThumbnailGenerator.detectFormatFromBase64(base64Data);
         String fileExtension = detectedType.equals("jpeg") ? "jpg" : detectedType;
 
-        String fileName = useOriginal ?
-                resource.getName() + "." + fileExtension :
-                resource.getName() + "_thumbnail." + fileExtension;
+        String fileName = useOriginal ? resource.getName() : resource.getName() + "_thumbnail.";
         // URL编码文件名
-        String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8.name())
+        String encodedFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8)
                 .replace("+", "%20");
         response.setContentType("image/" + detectedType);
 
